--- a/OtherDemos/react-typescript/package.json
+++ b/OtherDemos/react-typescript/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.3.14",
+    "@types/react-redux": "^6.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -36,6 +37,8 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
